@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2012-05-30 (SVN):
+    * net_sys.h: Added missing Amiga (bsdsocket.library) defs, separated
+      unix and amiga sections.
+
+2012-05-30 (SVN):
     * net_sys.h: Amiga bsdsockets.library struct sockaddr has sa_len.
 
 2012-05-30 (SVN):
